--- a/css/styles.css
+++ b/css/styles.css
@@ -1,32 +1,29 @@
 * {
     box-sizing: border-box;
-}
-
-#nav-list > li {
+.chicken-title{
     text-align: center;
+    font-weight: bold;
+    margin-bottom: 5px;
 }
 
-div section {
-    margin: 10px;
-    padding: 10px;
-}
-#section-1{
-    background-color: #B3E5FF;
+.chicken-section{
+background-color: gray;
+padding-right: 15px;
+padding-left: 15px;
+margin-right: auto;
+margin-left: auto;
+
 }
 
-#section-2 {
-    background-color: #FFC7B3;
+.dropdown-menu{
+    text-align: center;
+
 }
 
-#section-3 {
-    background-color: #C3FF80;
+.hr{
+    border: 2px solid black ;
 }
 
-#text > h3 {
-    margin-bottom: 15px;
-}
-
-#header-nav .navbar-brand {
-    position: absolute;
-    left: 10px;
+.caret{
+    visibility: hidden;
 }
